[package]
name = "fuskyom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "=7.0.0"
anyhow = "1.0.103"
crossterm = "0.28"
dirs = "6.0.0"
libc = "0.2.186"
lofty = "=0.21.1"
ratatui = "=0.29.0"
rodio = { version = "=0.20.1", features = ["mp3", "vorbis", "flac", "wav"] }
walkdir = "2.5.0"
